# siagasdl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: Atlantico_Sul_N_NE.txt  app.ipynb  extrator.ipynb  inspecionar.ipynb  pagina.html
src/samples/: readme.md
src/siagasdl/: __init__.py  __main__.py  collector.py  constants.py  core.py  settings.py  utils.py
