[tool.poetry]
name = "siagasdl"
version = "0.1.0"
description = "Baixador de dados do site siagasweb.sgb.gov.br"
authors = ["Vagner Bessa"]
license = "None"
readme = "README.md"
packages = [{include = "siagasdl", from = "src"}]
include = [
	{path = "src/app.py"},
	{path = "src/cli.py"},
	{path = "src/gui.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.16.1"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
lxml = "^4.9.3"
httpx = "^0.25.2"
pandas = "^2.1.3"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
siagasdl = "siagasdl.__main__:main"
